updated li elements to fix some alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,6 @@ body {
     'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
 }
 
-/* li {
-    margin-right: 2rem;
-} */
-
 #container { 
     display: flex;
     background-color: rgb(19,21,25);
@@ -69,9 +65,6 @@ img {
     max-height: 150px;
 }
 
-ul {
-    list-style: none;
-}
 
 #board-container {
     display: flex;
@@ -150,9 +143,14 @@ ul {
     font-size: 1rem;
     justify-content: left;
     margin-bottom: 1rem;
+    margin-right: .1rem;
 }
 
 .nav-item {
     display: flex;
     margin-right: 1rem
+}
+
+ul {
+    list-style: none;
 }
